--- a/accesoDatos/accesoDatos.csproj
+++ b/accesoDatos/accesoDatos.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4418DFEC-D164-49F6-859C-9B78D6ABABA9}</ProjectGuid>
+    <ProjectGuid>{2E30F3AD-156E-438E-9B28-A8D01D026717}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>negocio</RootNamespace>
-    <AssemblyName>negocio</AssemblyName>
+    <RootNamespace>accesoDatos</RootNamespace>
+    <AssemblyName>accesoDatos</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,20 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ArticuloNegocio.cs" />
-    <Compile Include="CategoriaNegocio.cs" />
-    <Compile Include="MarcaNegocio.cs" />
+    <Compile Include="ConexionDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\accesoDatos\accesoDatos.csproj">
-      <Project>{2e30f3ad-156e-438e-9b28-a8d01d026717}</Project>
-      <Name>accesoDatos</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\dominio\dominio.csproj">
-      <Project>{0fe1077b-c00f-440b-a001-2c004c42c052}</Project>
-      <Name>dominio</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
