--- a/presentacion/presentacion.csproj
+++ b/presentacion/presentacion.csproj
@@ -49,6 +49,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -67,10 +68,19 @@
     <Compile Include="fmrCatalogo.Designer.cs">
       <DependentUpon>fmrCatalogo.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAltaProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAltaProducto.Designer.cs">
+      <DependentUpon>frmAltaProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="fmrCatalogo.resx">
       <DependentUpon>fmrCatalogo.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAltaProducto.resx">
+      <DependentUpon>frmAltaProducto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
